--- a/package.json
+++ b/package.json
@@ -4,73 +4,53 @@
   "description": "api by koa on node with typescript",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && tsc",
-    "build:watch": "rm -rf dist && tsc -w",
-    "clean": "rm -rf node_modules coverage dist .nyc_output",
-    "coverage": "nyc --exclude dist/test --reporter=html npm run test:all",
-    "lint": "tslint --fix -p tsconfig.json",
-    "start": "pm2 start",
-    "start:dev": "pm2 start && pm2 logs & tsc-watch -p tsconfig.json --onSuccess 'npm run lint'",
-    "test": "npm run build && mocha --exit --recursive dist/test",
-    "test:check": "npm run build && mocha --exit dist/test/models/checks/some/some.test.js",
-    "test:checks": "npm run build && mocha --exit dist/test/models/checks/**/*.js",
-    "test:model": "npm run build && mocha --exit dist/test/models/some.test.js",
-    "test:models": "npm run build && mocha --exit dist/test/models/*.test.js",
-    "test:route": "npm run build && mocha --exit dist/test/routes/some.test.js",
-    "test:routes": "npm run build && mocha --exit dist/test/routes/*.test.js",
-    "test:integration": "npm run build && mocha --exit --recursive dist/test/integration",
-    "test:all": "npm run build && mocha --exit --recursive dist/test"
+    "start": "pm2 start"
   },
   "author": "S-Kazuki<contact@revoneo.com>",
   "license": "ISC",
   "dependencies": {
-    "@koa/cors": "^2.2.3",
-    "aws-sdk": "^2.387.0",
-    "axios": "^0.18.0",
+    "@koa/cors": "^3.0.0",
+    "aws-sdk": "^2.469.0",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "joi": "^14.3.1",
-    "jsonwebtoken": "^8.4.0",
-    "koa": "^2.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-i18n": "^2.1.0",
     "koa-jwt": "^3.5.1",
     "koa-locale": "^1.3.0",
     "koa-logger": "^3.2.0",
-    "koa-router": "^7.4.0",
-    "redis": "^2.8.0",
-    "xml2js": "^0.4.19"
+    "koa-router": "^7.4.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.1.7",
-    "@types/chai-http": "^3.0.5",
-    "@types/joi": "^14.0.1",
-    "@types/jsonwebtoken": "^8.3.0",
+    "@types/joi": "^14.3.3",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/koa": "^2.0.48",
-    "@types/koa-bodyparser": "^4.2.1",
+    "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
-    "@types/koa-router": "^7.0.37",
+    "@types/koa-router": "^7.0.40",
     "@types/koa__cors": "^2.2.3",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.18",
-    "@types/redis": "^2.8.10",
-    "@types/sinon": "^5.0.7",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.0.5",
+    "@types/sinon": "^7.0.12",
     "@types/uuid": "^3.4.4",
-    "@types/xml2js": "^0.4.3",
     "chai": "^4.2.0",
-    "chai-http": "^4.2.1",
-    "mocha": "^5.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.1.4",
     "mocha-sinon": "^2.1.0",
-    "nyc": "^13.1.0",
-    "pm2": "^3.2.8",
-    "prettier": "^1.15.3",
-    "tsc-watch": "^1.0.31",
-    "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.17.0",
+    "nyc": "^14.1.1",
+    "pm2": "^3.5.1",
+    "prettier": "^1.17.1",
+    "tsc-watch": "^2.2.1",
+    "tslint": "^5.17.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "tslint-no-unused-expression-chai": "^0.1.4",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.2.2",
+    "typescript": "^3.5.1",
     "uuid": "^3.3.2"
   }
 }
